fixed styling where edit button was not visible

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,5 +61,5 @@ li{
 #edit{
     position: relative;
     top: 60px;
-    right: 30%;
+    right: 12%;
 }
